feat: update Tools